Fixed overlapping issue

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,10 @@
   grid-gap: 3px;
   grid-area: n;
   display: grid;
+  /* grid-template-columns: auto; */
+  /* grid-template-columns: minmax(20px, auto-fit); */
   grid-template-rows: 4em 6em auto 5em;
+  width: auto;
   /* grid 1 x 4 logo top-nav playlists profile*/
 }
 
@@ -57,12 +60,10 @@
   grid-area: m;
   grid-gap: 3px;
   max-height: 80vh;
-  overflow: auto;
+  min-width: 50em;
+  overflow-y: auto;
   display: grid;
   grid-template-rows: 7fr 35fr 29fr 29fr;
-  /* grid-template-rows: 4em minmax(5fr, auto) minmax(4fr, auto) minmax(4fr, auto); */
-  /*grid 6 x 4 categories recently-played created most-popular */
-  /* *** sizing *** */
 }
 
 .main > div {
@@ -77,6 +78,27 @@
 
 .main-recently-played {
   min-height: 16em;
+  display: grid;
+  grid-gap: 3px;
+  grid-template-rows: 20% 80%;
+}
+
+.mrp-main {
+  display:grid;
+  grid-gap: 3px;
+  grid-template-columns: repeat(auto-fit, minmax(30px ,1fr));
+}
+
+.mrp-main > div {
+  border: black solid 0.5px;
+  padding: 0.3em;
+  background-color: deepskyblue;
+}
+
+.main-recently-played > div {
+  border: black solid 0.5px;
+  padding: 0.3em;
+  background-color:rgb(134, 22, 138);
 }
 
 .main-created {
@@ -95,7 +117,7 @@
   grid-area: f;
   display: grid;
   grid-template-columns: repeat(15, 1fr);
-  grid-template-areas: "np np c c c c c c c c c c c fr fr";
+  grid-template-areas: "q q c c c c c c c c c c c fr fr";
 }
 
 .footer > div {
@@ -105,7 +127,7 @@
 }
 
 .footer-now-playing {
-  grid-area: np;
+  grid-area: q;
 }
 
 .footer-controls {
@@ -119,3 +141,8 @@
 
   /* grid 3 x 1 now-playing controls footer-right*/
 
+  @media only screen and (max-width: 678px) {
+    .main {
+      max-width: 600px;
+    }
+  }
